data/derived/fa15/progs/unify/prog3902.ml.out
Characters 436-451:
  removeZero (add (padZero l1 l2));;
                  ^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int list * int list
